--- a/Proyecto final k-pop/css/style.css
+++ b/Proyecto final k-pop/css/style.css
@@ -2,6 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    height: 100vh; /* Hace que el body ocupe el 100% de la pantalla */
+    background-image: url('../recursos/k-pop\ banner.png');
+    background-size: cover; /* Ajusta el tamaño para que cubra toda la pantalla */
+    background-position: center; /* Centra la imagen */
+    background-attachment: fixed; /* Evita que el fondo se mueva al hacer scroll */
+    color: white;
 }
 
 header {
@@ -49,11 +55,3 @@ section {
     text-align: center;
     padding: 20px;
 }
-.banner {
-    width: 100%;
-    height: 300px; 
-    background-image: url('../recursos/k-pop banner.png'); 
-    background-size: cover;
-    background-position: center;
-}
-
